@@ -1,4 +1,6 @@
 ver 0.21.21 (not yet released)
+* archive
+  - iso9660: skip empty file names to work around libcdio bug
 * decoder
   - gme: ignore empty tags
 * output
